--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@ layout: home
 
 <div class="container">
   <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
+  <p><strong>Oops, I made a mistake :(</strong></p>
+  <p>Contact me about this page & problem</p>
   <img src="/irs.ea/assets/images/abacus.jpg" width="90%" />
 </div>
